fix: adjust toast panel styling for improved visual consistency and spacing

--- a/src/components/common/ToastPanel.css
+++ b/src/components/common/ToastPanel.css
@@ -64,9 +64,9 @@
 .toast::before {
     content: '';
     position: absolute;
-    top: 0.75rem;
+    top: 1.1rem;
     left: 0.75rem;
-    bottom: 0.75rem;
+    bottom: 1.1rem;
     width: 0.4rem;
     border-radius: 99px;
     background-color: var(--clr);
@@ -101,11 +101,13 @@
 }
 
 .toast.toast-help { --bg: var(--ch1); --clr: var(--ch2); }
+.toast.toast-info { --bg: var(--ch1); --clr: var(--ch2); }
 .toast.toast-success { --bg: var(--cs1); --clr: var(--cs2); }
 .toast.toast-warning { --bg: var(--cw1); --clr: var(--cw2); }
 .toast.toast-error { --bg: var(--ce1); --clr: var(--ce2); }
 
 .icon-help, .toast-item.toast-help { --clr: #0070e0; }
+.icon-info, .toast-item.toast-info { --clr: #0070e0; }
 .icon-success, .toast-item.toast-success { --clr: #03a65a; }
 .icon-warning, .toast-item.toast-warning { --clr: #fc8621; }
 .icon-error, .toast-item.toast-error { --clr: #db3056; }
